/*
 * $Id: ChangeLog,v 1.896 2003/03/29 21:28:48 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-29 20:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * makefile.bc
    makefile.vc
    source/Makefile
    ! updated to Build the new samples.lib and hbodbc.lib
  + Source/clipsamp/environ.c
  + Source/clipsamp/date.c
  + Source/clipsamp/dbf.c
  + Source/clipsamp/gauge.c
  + Source/clipsamp/num.c
  + Source/clipsamp/stack.c
  + Source/clipsamp/status.c
  + Source/clipsamp/time.c
  + Source/clipsamp/Makefile
    ! Source code to Build Clipper compatible samples.lib
  + Source/odbc/odbc.c
  + Source/odbc/todbc.prg
  + Source/odbc/sql.ch
  + Source/odbc/Makefile
  + Source/odbc/browodbc.prg
    ! Source code to Build hbodbc.lib library for odbc acess

2003-03-29 13:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    * Removed BOOL bNoParent from hb_clsHasMsg() and replace it with logic to validate the scope of the message.

2003-03-29 18:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * include/hbgetcmt.ch
    ! Fix definition of Read command
  * contrib/rdd_ads/adsfunc.c
    + ADSSETDBPROPERTY() for setting values on Data Dictionaries
  * contrib/rdd_ads.ch
    + Commands for Transaction
    + Define for ADSSETDBPROPERTY()  and ADSGETDBPROPERTY() functions

2003-03-29 12:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    + Added BOOL hb_clsHasMsg( USHORT uiClass, char *szMsg, BOOL bNoParent )
    ! Fixed hb_clsValidScope() to allow a a Caller Method to access a Message that is
      avialable within the scope of the Super Class where the CAller Method is implemented.

  * tests/tstscope.prg
    * Corrected Instance Var syntax.

2003-03-29 14:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * contrib\libct\makefile.vc
    + files.c
